# home

./: .Xresources  .bash_profile  .bashrc  .condarc  .ctags  .eslintrc.json  .ghci  .gitconfig  .gitmodules  .gtkrc-2.0  .inputrc  .latexmkrc  .profile  .pythonpath  .pythonstartup  .tmux.conf  .xinitrc  .zshrc  readme.md
.ansible/: .gitignore  ARCH_WIKI_COMPLIANCE.md  COMPARISON.md  CONVERSION_NOTES.md  INDEX.md  INIT_ROLES.md  Makefile  OVERVIEW.md  QUICKSTART.md  README.md  STRUCTURE.md  TROUBLESHOOTING.md  ansible.cfg  requirements.yml  site.yml
.build/: Makefile  readme.md
.calcurse/: Makefile  conf
.config/: chromium-flags.conf  mimeapps.list  readme.md
.dwm/: autostart.sh
.emacs.d/: init.el  readme.md
.extra/: fstab  fstab2  hosts  index.html  jupyterhub.service  mirrorlist  nginx.conf  pacman.conf  readme.md  reinstall-checklist  sshtunnel.service  tensorboard.service  useful_commands
.first_install/: first_install.sh  readme.md  services  user_install.sh
.github/: readme.md
.gnupg/: gpg-agent.conf
.install/: arch_install  debian_install  pi_install  python_install  readme.md  services
.jupyter/: jupyter_notebook_config.py  jupyter_server_config.py  jupyterhub.nginx  jupyterhub.service  jupyterhub_config.py  jupyterhub_generate_service.sh  readme.md
.local/: readme.md
.local/share/guv/base/: pyproject.toml
.scripts/: alsamixer  asciicalendar  browsercontrol  ca  calendar  cat  copy  docs  drive  facebook  fdtd  floating_python  floating_terminal  fsed  fzfopen  git-clean-history  git-mirror  git-redate  gmail  gmail0  gmail1  gmail2  lab  (+35 more)
(+761 files in other folders)
