[project]
name = "base"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "altair>=5.4.1",
  "black>=24.10.0",
  "bokeh>=3.6.1",
  "boto3>=1.35.69",
  "bump2version>=1.0.1",
  "configurable-http-proxy>=0.3.0",
  "cython>=3.0.11",
  "fastapi>=0.115.5",
  "gdsfactory==8.18.2",
  "gdsfactoryplus>=0.14",
  "h5py>=3.12.1",
  "httpx>=0.27.2",
  "ipykernel>=6.29.5",
  "ipympl>=0.9.4",
  "jax>=0.4.35",
  "jinja2>=3.1.4",
  "jupyter-bokeh>=4.0.5",
  "jupyter-book>=1.0.3",
  "jupyterhub>=5.2.1",
  "jupyterlab-code-formatter>=3.0.2",
  "jupyterlab-git>=0.50.2",
  "jupyterlab-hdf>=1.3.0",
  "jupyterlab-lsp>=5.1.0",
  "jupyterlab-myst>=2.4.2",
  "jupyterlab-vim>=4.1.4",
  "jupyterlab>=4.3.0",
  "klujax>=0.3.1",
  "mangum>=0.19.0",
  "matplotlib>=3.9.2",
  "myst-nb>=1.1.2",
  "natsort>=8.4.0",
  "nbstripout>=0.8.0",
  "numpy>2",
  "openpyxl>=3.1.5",
  "orjson>=3.10.11",
  "pandas>=2.2.3",
  "pip>=24.3.1",
  "plotly>=5.24.1",
  "pre-commit>=4.0.1",
  "pyarrow>=18.0.0",
  "pydantic>=2.9.2",
  "pynvim>=0.5.2",
  "pyright>=1.1.389",
  "pytest>=8.3.3",
  "python-multipart>=0.0.17",
  "pywavelets>=1.7.0",
  "pyyaml>=6.0.2",
  "requests>=2.32.3",
  "ruff>=0.7.3",
  "sax>=0.14.0",
  "saxviz>=0.0.0",
  "scikit-learn>=1.5.2",
  "scikit-rf>=1.4.1",
  "scipy>=1.14.1",
  "seaborn>=0.13.2",
  "tables>=3.10.1",
  "tbump>=6.11.0",
  "toml>=0.10.2",
  "tqdm>=4.67.0",
  "twine>=5.1.1",
  "typer>=0.13.0",
  "uvicorn>=0.32.0",
]
